// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`nahtavillaoloKuulutusAsiakirja should generate ilmoitus kiinteistöjen omistajille pdf succesfully SUOMI (rata) 1`] = `
Object {
  "fileName": "esikatselu_aloituskuulutus_RATA__R415 Ilmoitus kiinteistonomistajille nahtaville asettamisesta.pdf",
  "textContent": "VAYLA/1/2022



Testiprojekti 1
Hyvä suunnittelualueen kiinteistönomistaja,
Väylävirasto on laatinut ratalain (110/2007) mukaisen ratasuunnitelman: Testiprojekti 1.

Suunnitelma pidetään yleisesti nähtävillä 7.6.2022 - 7.6.2042 osoitteessa https://localhost:3000/s/ABCD/nahtavillaolo.

Kiinteistön omistajilla ja muilla asianosaisilla, sekä niillä, joiden asumiseen, työntekoon tai muihin oloihin suunnitelma vaikuttaa on mahdollisuus tehdä suunnitelmasta muistutus. (ratalaki 22 § 1 mom).
Muistutus on tehtävä ennen nähtävänäoloajan päättymistä, eli 7.6.2042 mennessä.
Muistutuksen voi tehdä osoitteessa https://localhost:3000/s/ABCD/nahtavillaolo tai toimittamalla se Väyläviraston kirjaamoon osoitteeseen <kirjaamon VAYLAVIRASTO osoitetta ei löydy>. Kirjaamoon lähetettävään muistutukseen tulee liittää asiatunnus VAYLA/1/2022.

Tämä ilmoitus on lähetetty kaikille niille kiinteistön omistajille ja haltijoille (ratalaki 22 § 3 mom): 

	- joiden kiinteistöltä suunnitelman mukaan lunastetaan aluetta, 
	- joiden kiinteistön alueelle muodostuu suoja- tai näkemäalue, 
	- joiden kiinteistön alueeseen perustetaan muu oikeus tai 
	- joiden kiinteistö rajoittuu rautatiealueeseen.
Väylävirasto käsittelee suunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Halutessasi tietää tarkemmin väyläsuunnittelun tietosuojakäytänteistä tutustu verkkosivujen tietosuojaosioon, https://www.vayla.fi/tietosuoja.

Lisätietoja antaa 
Pekka Projari (Väylävirasto), 
puh. 029312, pekka.projari(at)vayla.fi 
Matti Meikalainen (Väylävirasto), 
puh. 0293123123, Matti.Meikalainen(at)vayla.fi 
Marko Koi (Kajaani), 
puh. 0293121213, markku.koi(at)koi.com 

LUONNOS",
}
`;

exports[`nahtavillaoloKuulutusAsiakirja should generate ilmoitus kiinteistöjen omistajille pdf succesfully SUOMI (rata, vähäinen menettely) 1`] = `
Object {
  "fileName": "esikatselu_aloituskuulutus_RATA__R415 Ilmoitus kiinteistonomistajille nahtaville asettamisesta.pdf",
  "textContent": "VAYLA/1/2022



Testiprojekti 1
Hyvä suunnittelualueen kiinteistönomistaja,
Väylävirasto on laatinut ratalain (110/2007) mukaisen ratasuunnitelman: Testiprojekti 1.

Ratasuunnitelman osalta kyse on ratalain 23 §:n mukaisesta vähäisestä rautatien parantamisesta, joka ei muuta paikallisia liikenneolosuhteita ja jonka vaikutukset ovat muutenkin vähäiset.
Suunnitelma pidetään yleisesti nähtävillä 7.6.2022 - 7.6.2042 osoitteessa https://localhost:3000/s/ABCD/nahtavillaolo.

Kiinteistön omistajilla ja muilla asianosaisilla, sekä niillä, joiden asumiseen, työntekoon tai muihin oloihin suunnitelma vaikuttaa on mahdollisuus tehdä suunnitelmasta muistutus (ratalaki 22 § ja 23 §).
Muistutus on tehtävä ennen nähtävänäoloajan päättymistä, eli 7.6.2042 mennessä.
Muistutuksen voi tehdä osoitteessa https://localhost:3000/s/ABCD/nahtavillaolo tai toimittamalla se Väyläviraston kirjaamoon osoitteeseen <kirjaamon VAYLAVIRASTO osoitetta ei löydy>. Kirjaamoon lähetettävään muistutukseen tulee liittää asiatunnus VAYLA/1/2022.

Tämä ilmoitus on lähetetty kaikille niille kiinteistön omistajille ja haltijoille (ratalaki 22 § 3 mom): 

	- joiden kiinteistöltä suunnitelman mukaan lunastetaan aluetta, 
	- joiden kiinteistön alueelle muodostuu suoja- tai näkemäalue, 
	- joiden kiinteistön alueeseen perustetaan muu oikeus tai 
	- joiden kiinteistö rajoittuu rautatiealueeseen.
Väylävirasto käsittelee suunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Halutessasi tietää tarkemmin väyläsuunnittelun tietosuojakäytänteistä tutustu verkkosivujen tietosuojaosioon, https://www.vayla.fi/tietosuoja.

Lisätietoja antaa 
Pekka Projari (Väylävirasto), 
puh. 029312, pekka.projari(at)vayla.fi 
Matti Meikalainen (Väylävirasto), 
puh. 0293123123, Matti.Meikalainen(at)vayla.fi 
Marko Koi (Kajaani), 
puh. 0293121213, markku.koi(at)koi.com 

LUONNOS",
}
`;

exports[`nahtavillaoloKuulutusAsiakirja should generate ilmoitus kiinteistöjen omistajille pdf succesfully SUOMI (tie) (suunnittelusopimus) 1`] = `
Object {
  "fileName": "esikatselu_aloituskuulutus_TIE_suunnittelusopimus_T415 Ilmoitus kiinteistonomistajille nahtaville asettamisesta.pdf",
  "textContent": "ELY/1/2022



Testiprojekti 1
Hyvä suunnittelualueen kiinteistönomistaja,
Uudenmaan elinkeino-, liikenne- ja ympäristökeskus (ELY-keskus) on laatinut liikennejärjestelmästä ja maanteistä annetun lain (503/2005) mukaisen tiesuunnitelman: Testiprojekti 1.

Suunnitelma pidetään yleisesti nähtävillä 7.6.2022 - 7.6.2042 osoitteessa https://localhost:3000/s/ABCD/nahtavillaolo.

Kiinteistön omistajilla ja muilla asianosaisilla, sekä niillä, joiden asumiseen, työntekoon tai muihin oloihin suunnitelma vaikuttaa on mahdollisuus tehdä suunnitelmasta muistutus. (laki liikennejärjestelmästä ja maanteistä LjMTL 27§).
Muistutus on tehtävä ennen nähtävänäoloajan päättymistä, eli 7.6.2042 mennessä.
Muistutuksen voi tehdä osoitteessa https://localhost:3000/s/ABCD/nahtavillaolo tai toimittamalla se Uudenmaan ELY-keskuksen kirjaamoon osoitteeseen uudenmaan_kirjaamo@uudenmaan.ely. Kirjaamoon lähetettävään muistutukseen tulee liittää asiatunnus ELY/1/2022.

Tämä ilmoitus on lähetetty kaikille niille kiinteistön omistajille ja haltijoille (LjMTL 27 § 3 mom): 

	- joiden kiinteistöltä suunnitelman mukaan lunastetaan aluetta, 
	- joiden kiinteistön alueelle muodostuu suoja- tai näkemäalue, 
	- joiden kiinteistön alueeseen perustetaan muu oikeus tai 
	- joiden kiinteistö rajoittuu tiealueeseen.
Uudenmaan elinkeino-, liikenne- ja ympäristökeskus käsittelee suunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Halutessasi tietää tarkemmin väyläsuunnittelun tietosuojakäytänteistä tutustu verkkosivujen tietosuojaosioon, https://www.ely-keskus.fi/tietosuoja-ja-henkilotietojen-kasittely.

Lisätietoja antaa 
Pekka Projari (Väylävirasto), 
puh. 029312, pekka.projari(at)vayla.fi 
Matti Meikalainen (Väylävirasto), 
puh. 0293123123, Matti.Meikalainen(at)vayla.fi 
Marko Koi (Kajaani), 
puh. 0293121213, markku.koi(at)koi.com 

LUONNOS",
}
`;

exports[`nahtavillaoloKuulutusAsiakirja should generate ilmoitus kiinteistöjen omistajille pdf succesfully SUOMI (tie) 1`] = `
Object {
  "fileName": "esikatselu_aloituskuulutus_TIE__T415 Ilmoitus kiinteistonomistajille nahtaville asettamisesta.pdf",
  "textContent": "ELY/1/2022



Testiprojekti 1
Hyvä suunnittelualueen kiinteistönomistaja,
Uudenmaan elinkeino-, liikenne- ja ympäristökeskus (ELY-keskus) on laatinut liikennejärjestelmästä ja maanteistä annetun lain (503/2005) mukaisen tiesuunnitelman: Testiprojekti 1.

Suunnitelma pidetään yleisesti nähtävillä 7.6.2022 - 7.6.2042 osoitteessa https://localhost:3000/s/ABCD/nahtavillaolo.

Kiinteistön omistajilla ja muilla asianosaisilla, sekä niillä, joiden asumiseen, työntekoon tai muihin oloihin suunnitelma vaikuttaa on mahdollisuus tehdä suunnitelmasta muistutus. (laki liikennejärjestelmästä ja maanteistä LjMTL 27§).
Muistutus on tehtävä ennen nähtävänäoloajan päättymistä, eli 7.6.2042 mennessä.
Muistutuksen voi tehdä osoitteessa https://localhost:3000/s/ABCD/nahtavillaolo tai toimittamalla se Uudenmaan ELY-keskuksen kirjaamoon osoitteeseen uudenmaan_kirjaamo@uudenmaan.ely. Kirjaamoon lähetettävään muistutukseen tulee liittää asiatunnus ELY/1/2022.

Tämä ilmoitus on lähetetty kaikille niille kiinteistön omistajille ja haltijoille (LjMTL 27 § 3 mom): 

	- joiden kiinteistöltä suunnitelman mukaan lunastetaan aluetta, 
	- joiden kiinteistön alueelle muodostuu suoja- tai näkemäalue, 
	- joiden kiinteistön alueeseen perustetaan muu oikeus tai 
	- joiden kiinteistö rajoittuu tiealueeseen.
Uudenmaan elinkeino-, liikenne- ja ympäristökeskus käsittelee suunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Halutessasi tietää tarkemmin väyläsuunnittelun tietosuojakäytänteistä tutustu verkkosivujen tietosuojaosioon, https://www.ely-keskus.fi/tietosuoja-ja-henkilotietojen-kasittely.

Lisätietoja antaa 
Pekka Projari (Väylävirasto), 
puh. 029312, pekka.projari(at)vayla.fi 
Matti Meikalainen (Väylävirasto), 
puh. 0293123123, Matti.Meikalainen(at)vayla.fi 
Marko Koi (Kajaani), 
puh. 0293121213, markku.koi(at)koi.com 

LUONNOS",
}
`;

exports[`nahtavillaoloKuulutusAsiakirja should generate ilmoitus kiinteistöjen omistajille pdf succesfully SUOMI (tie, vähäinen menettely) 1`] = `
Object {
  "fileName": "esikatselu_aloituskuulutus_TIE__T415 Ilmoitus kiinteistonomistajille nahtaville asettamisesta.pdf",
  "textContent": "ELY/1/2022



Testiprojekti 1
Hyvä suunnittelualueen kiinteistönomistaja,
Uudenmaan elinkeino-, liikenne- ja ympäristökeskus (ELY-keskus) on laatinut liikennejärjestelmästä ja maanteistä annetun lain (503/2005) mukaisen tiesuunnitelman: Testiprojekti 1.

Tiesuunnitelman osalta kyse on lain liikennejärjestelmästä ja maanteistä 28 §:n mukaisesta vähäisestä maantien parantamisesta, joka ei muuta paikallisia liikenneolosuhteita ja jonka vaikutukset ovat muutenkin vähäiset.
Suunnitelma pidetään yleisesti nähtävillä 7.6.2022 - 7.6.2042 osoitteessa https://localhost:3000/s/ABCD/nahtavillaolo.

Kiinteistön omistajilla ja muilla asianosaisilla, sekä niillä, joiden asumiseen, työntekoon tai muihin oloihin suunnitelma vaikuttaa on mahdollisuus tehdä suunnitelmasta muistutus (LjMTL 27 § ja 28 §).
Muistutus on tehtävä ennen nähtävänäoloajan päättymistä, eli 7.6.2042 mennessä.
Muistutuksen voi tehdä osoitteessa https://localhost:3000/s/ABCD/nahtavillaolo tai toimittamalla se Uudenmaan ELY-keskuksen kirjaamoon osoitteeseen uudenmaan_kirjaamo@uudenmaan.ely. Kirjaamoon lähetettävään muistutukseen tulee liittää asiatunnus ELY/1/2022.

Tämä ilmoitus on lähetetty kaikille niille kiinteistön omistajille ja haltijoille (LjMTL 27 § 3 mom): 

	- joiden kiinteistöltä suunnitelman mukaan lunastetaan aluetta, 
	- joiden kiinteistön alueelle muodostuu suoja- tai näkemäalue, 
	- joiden kiinteistön alueeseen perustetaan muu oikeus tai 
	- joiden kiinteistö rajoittuu tiealueeseen.
Uudenmaan elinkeino-, liikenne- ja ympäristökeskus käsittelee suunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Halutessasi tietää tarkemmin väyläsuunnittelun tietosuojakäytänteistä tutustu verkkosivujen tietosuojaosioon, https://www.ely-keskus.fi/tietosuoja-ja-henkilotietojen-kasittely.

Lisätietoja antaa 
Pekka Projari (Väylävirasto), 
puh. 029312, pekka.projari(at)vayla.fi 
Matti Meikalainen (Väylävirasto), 
puh. 0293123123, Matti.Meikalainen(at)vayla.fi 
Marko Koi (Kajaani), 
puh. 0293121213, markku.koi(at)koi.com 




ELY/1/2022


LUONNOSLUONNOS",
}
`;

exports[`nahtavillaoloKuulutusAsiakirja should generate ilmoitus kiinteistöjen omistajille pdf succesfully SUOMI (yleis) (suunnittelusopimus) 1`] = `
Object {
  "fileName": "esikatselu_aloituskuulutus_YLEINEN_suunnittelusopimus_Y415 Ilmoitus kiinteistonomistajille nahtaville asettamisesta.pdf",
  "textContent": "ELY/1/2022



Testiprojekti 1
Hyvä suunnittelualueen kiinteistönomistaja,
Uudenmaan elinkeino-, liikenne- ja ympäristökeskus (ELY-keskus) on laatinut liikennejärjestelmästä ja maanteistä annetun lain (503/2005) mukaisen yleissuunnitelman: Testiprojekti 1.

Suunnitelma pidetään yleisesti nähtävillä 7.6.2022 - 7.6.2042 osoitteessa https://localhost:3000/s/ABCD/nahtavillaolo.

Kiinteistön omistajilla ja muilla asianosaisilla, sekä niillä, joiden asumiseen, työntekoon tai muihin oloihin suunnitelma vaikuttaa on mahdollisuus tehdä suunnitelmasta muistutus. (laki liikennejärjestelmästä ja maanteistä LjMTL 27§).
Muistutus on tehtävä ennen nähtävänäoloajan päättymistä, eli 7.6.2042 mennessä.
Muistutuksen voi tehdä osoitteessa https://localhost:3000/s/ABCD/nahtavillaolo tai toimittamalla se Uudenmaan ELY-keskuksen kirjaamoon osoitteeseen uudenmaan_kirjaamo@uudenmaan.ely. Kirjaamoon lähetettävään muistutukseen tulee liittää asiatunnus ELY/1/2022.

Tämä ilmoitus on lähetetty kaikille niille kiinteistön omistajille ja haltijoille, jotka Maanmittauslaitoksen (MML) kiinteistötietojärjestelmän mukaan omistavat kiinteistön suunnittelualueella tai sen läheisyydessä.
Uudenmaan elinkeino-, liikenne- ja ympäristökeskus käsittelee suunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Halutessasi tietää tarkemmin väyläsuunnittelun tietosuojakäytänteistä tutustu verkkosivujen tietosuojaosioon, https://www.ely-keskus.fi/tietosuoja-ja-henkilotietojen-kasittely.

Lisätietoja antaa 
Pekka Projari (Väylävirasto), 
puh. 029312, pekka.projari(at)vayla.fi 
Matti Meikalainen (Väylävirasto), 
puh. 0293123123, Matti.Meikalainen(at)vayla.fi 
Marko Koi (Kajaani), 
puh. 0293121213, markku.koi(at)koi.com 

LUONNOS",
}
`;

exports[`nahtavillaoloKuulutusAsiakirja should generate ilmoitus kunnille/viranomaisille pdf succesfully SUOMI (rata) 1`] = `
Object {
  "fileName": "esikatselu_aloituskuulutus_RATA__R414-1 Ilmoitus suunnitelman nahtavillaolo.pdf",
  "textContent": "VAYLA/1/2022



Ilmoitus Väyläviraston kuulutuksesta
Testiprojekti 1
Väylävirasto julkaisee kuulutuksen, joka koskee otsikossa mainitun ratasuunnitelman nähtäville asettamista. Väylävirasto saattaa asian tiedoksi julkisesti kuuluttamalla siten, kuin julkisesta kuulutuksesta säädetään hallintolaissa, sekä julkaisemalla kuulutuksen vähintään yhdessä alueella yleisesti ilmestyvässä sanomalehdessä. (ratalaki 95 §/laki liikennejärjestelmästä ja maanteistä LjMTL 108§, hallintolaki HL 62 a §) 
Kuulutus julkaistaan 7.6.2022 osoitteessa https://localhost:3000/s/ABCD/nahtavillaolo



Kuulutus on nähtävillä 7.6.2022 - 7.6.2042 välisen ajan
Lisätietoja antaa 
Pekka Projari (Väylävirasto), 
puh. 029312, pekka.projari(at)vayla.fi 
Matti Meikalainen (Väylävirasto), 
puh. 0293123123, Matti.Meikalainen(at)vayla.fi 
Marko Koi (Kajaani), 
puh. 0293121213, markku.koi(at)koi.com 

LUONNOS",
}
`;

exports[`nahtavillaoloKuulutusAsiakirja should generate ilmoitus kunnille/viranomaisille pdf succesfully SUOMI (rata, vähäinen menettely) 1`] = `
Object {
  "fileName": "esikatselu_aloituskuulutus_RATA__R414-1 Ilmoitus suunnitelman nahtavillaolo.pdf",
  "textContent": "VAYLA/1/2022



Ilmoitus Väyläviraston kuulutuksesta
Testiprojekti 1
Väylävirasto julkaisee kuulutuksen, joka koskee otsikossa mainitun ratasuunnitelman nähtäville asettamista. Väylävirasto saattaa asian tiedoksi julkisesti kuuluttamalla siten, kuin julkisesta kuulutuksesta säädetään hallintolaissa, sekä julkaisemalla kuulutuksen vähintään yhdessä alueella yleisesti ilmestyvässä sanomalehdessä. (ratalaki 95 §/laki liikennejärjestelmästä ja maanteistä LjMTL 108§, hallintolaki HL 62 a §) 
Ratasuunnitelman osalta kyse on ratalain 23 §:n mukaisesta vähäisestä rautatien parantamisesta, joka ei muuta paikallisia liikenneolosuhteita ja jonka vaikutukset ovat muutenkin vähäiset.
Kuulutus julkaistaan 7.6.2022 osoitteessa https://localhost:3000/s/ABCD/nahtavillaolo



Kuulutus on nähtävillä 7.6.2022 - 7.6.2042 välisen ajan
Lisätietoja antaa 
Pekka Projari (Väylävirasto), 
puh. 029312, pekka.projari(at)vayla.fi 
Matti Meikalainen (Väylävirasto), 
puh. 0293123123, Matti.Meikalainen(at)vayla.fi 
Marko Koi (Kajaani), 
puh. 0293121213, markku.koi(at)koi.com 

LUONNOS",
}
`;

exports[`nahtavillaoloKuulutusAsiakirja should generate ilmoitus kunnille/viranomaisille pdf succesfully SUOMI (tie) (suunnittelusopimus) 1`] = `
Object {
  "fileName": "esikatselu_aloituskuulutus_TIE_suunnittelusopimus_T414_1 Ilmoitus suunnitelman nahtavillaolo.pdf",
  "textContent": "ELY/1/2022



Ilmoitus Uudenmaan ELY-keskuksen kuulutuksesta
Testiprojekti 1
Uudenmaan elinkeino-, liikenne- ja ympäristökeskus (ELY-keskus) julkaisee kuulutuksen, joka koskee otsikossa mainitun tiesuunnitelman nähtäville asettamista. Uudenmaan ELY-keskus saattaa asian tiedoksi julkisesti kuuluttamalla siten, kuin julkisesta kuulutuksesta säädetään hallintolaissa, sekä julkaisemalla kuulutuksen vähintään yhdessä alueella yleisesti ilmestyvässä sanomalehdessä. (laki liikennejärjestelmästä ja maanteistä LjMTL 108§, hallintolaki HL 62 a §) 
Kuulutus julkaistaan 7.6.2022 osoitteessa https://localhost:3000/s/ABCD/nahtavillaolo



Kuulutus on nähtävillä 7.6.2022 - 7.6.2042 välisen ajan
Lisätietoja antaa 
Pekka Projari (Väylävirasto), 
puh. 029312, pekka.projari(at)vayla.fi 
Matti Meikalainen (Väylävirasto), 
puh. 0293123123, Matti.Meikalainen(at)vayla.fi 
Marko Koi (Kajaani), 
puh. 0293121213, markku.koi(at)koi.com 

LUONNOS",
}
`;

exports[`nahtavillaoloKuulutusAsiakirja should generate ilmoitus kunnille/viranomaisille pdf succesfully SUOMI (tie) 1`] = `
Object {
  "fileName": "esikatselu_aloituskuulutus_TIE__T414_1 Ilmoitus suunnitelman nahtavillaolo.pdf",
  "textContent": "ELY/1/2022



Ilmoitus Uudenmaan ELY-keskuksen kuulutuksesta
Testiprojekti 1
Uudenmaan elinkeino-, liikenne- ja ympäristökeskus (ELY-keskus) julkaisee kuulutuksen, joka koskee otsikossa mainitun tiesuunnitelman nähtäville asettamista. Uudenmaan ELY-keskus saattaa asian tiedoksi julkisesti kuuluttamalla siten, kuin julkisesta kuulutuksesta säädetään hallintolaissa, sekä julkaisemalla kuulutuksen vähintään yhdessä alueella yleisesti ilmestyvässä sanomalehdessä. (laki liikennejärjestelmästä ja maanteistä LjMTL 108§, hallintolaki HL 62 a §) 
Kuulutus julkaistaan 7.6.2022 osoitteessa https://localhost:3000/s/ABCD/nahtavillaolo



Kuulutus on nähtävillä 7.6.2022 - 7.6.2042 välisen ajan
Lisätietoja antaa 
Pekka Projari (Väylävirasto), 
puh. 029312, pekka.projari(at)vayla.fi 
Matti Meikalainen (Väylävirasto), 
puh. 0293123123, Matti.Meikalainen(at)vayla.fi 
Marko Koi (Kajaani), 
puh. 0293121213, markku.koi(at)koi.com 

LUONNOS",
}
`;

exports[`nahtavillaoloKuulutusAsiakirja should generate ilmoitus kunnille/viranomaisille pdf succesfully SUOMI (tie, vähäinen menettely) 1`] = `
Object {
  "fileName": "esikatselu_aloituskuulutus_TIE__T414_1 Ilmoitus suunnitelman nahtavillaolo.pdf",
  "textContent": "ELY/1/2022



Ilmoitus Uudenmaan ELY-keskuksen kuulutuksesta
Testiprojekti 1
Uudenmaan elinkeino-, liikenne- ja ympäristökeskus (ELY-keskus) julkaisee kuulutuksen, joka koskee otsikossa mainitun tiesuunnitelman nähtäville asettamista. Uudenmaan ELY-keskus saattaa asian tiedoksi julkisesti kuuluttamalla siten, kuin julkisesta kuulutuksesta säädetään hallintolaissa, sekä julkaisemalla kuulutuksen vähintään yhdessä alueella yleisesti ilmestyvässä sanomalehdessä. (laki liikennejärjestelmästä ja maanteistä LjMTL 108§, hallintolaki HL 62 a §) 
Tiesuunnitelman osalta kyse on lain liikennejärjestelmästä ja maanteistä 28 §:n mukaisesta vähäisestä maantien parantamisesta, joka ei muuta paikallisia liikenneolosuhteita ja jonka vaikutukset ovat muutenkin vähäiset.
Kuulutus julkaistaan 7.6.2022 osoitteessa https://localhost:3000/s/ABCD/nahtavillaolo



Kuulutus on nähtävillä 7.6.2022 - 7.6.2042 välisen ajan
Lisätietoja antaa 
Pekka Projari (Väylävirasto), 
puh. 029312, pekka.projari(at)vayla.fi 
Matti Meikalainen (Väylävirasto), 
puh. 0293123123, Matti.Meikalainen(at)vayla.fi 
Marko Koi (Kajaani), 
puh. 0293121213, markku.koi(at)koi.com 

LUONNOS",
}
`;

exports[`nahtavillaoloKuulutusAsiakirja should generate ilmoitus kunnille/viranomaisille pdf succesfully SUOMI (yleis) (suunnittelusopimus) 1`] = `
Object {
  "fileName": "esikatselu_aloituskuulutus_YLEINEN_suunnittelusopimus_Y414-1 Ilmoitus suunnitelman nahtavillaolo.pdf",
  "textContent": "ELY/1/2022



Ilmoitus Uudenmaan ELY-keskuksen kuulutuksesta
Testiprojekti 1
Uudenmaan elinkeino-, liikenne- ja ympäristökeskus (ELY-keskus) julkaisee kuulutuksen, joka koskee otsikossa mainitun yleissuunnitelman nähtäville asettamista. Uudenmaan ELY-keskus saattaa asian tiedoksi julkisesti kuuluttamalla siten, kuin julkisesta kuulutuksesta säädetään hallintolaissa, sekä julkaisemalla kuulutuksen vähintään yhdessä alueella yleisesti ilmestyvässä sanomalehdessä. (laki liikennejärjestelmästä ja maanteistä LjMTL 108§, hallintolaki HL 62 a §) 
Kuulutus julkaistaan 7.6.2022 osoitteessa https://localhost:3000/s/ABCD/nahtavillaolo



Kuulutus on nähtävillä 7.6.2022 - 7.6.2042 välisen ajan
Lisätietoja antaa 
Pekka Projari (Väylävirasto), 
puh. 029312, pekka.projari(at)vayla.fi 
Matti Meikalainen (Väylävirasto), 
puh. 0293123123, Matti.Meikalainen(at)vayla.fi 
Marko Koi (Kajaani), 
puh. 0293121213, markku.koi(at)koi.com 

LUONNOS",
}
`;

exports[`nahtavillaoloKuulutusAsiakirja should generate kuulutus pdf succesfully SUOMI (rata) 1`] = `
Object {
  "fileName": "esikatselu_aloituskuulutus_RATA__R414 Kuulutus suunnitelman nahtavillaolo.pdf",
  "textContent": "VAYLA/1/2022



Kuulutus suunnitelman nähtäville asettamisesta
Testiprojekti 1
Väylävirasto on laatinut ratalain (110/2007) mukaisen ratasuunnitelman: Testiprojekti 1.

Lorem Ipsum nahtavillaoloVaihe
Väylävirasto on 7.6.2022 julkaissut kuulutuksen suunnitelman nähtäville asettamisesta. Asianosaisten katsotaan saaneen tiedon suunnitelman nähtäville asettamisesta seitsemäntenä päivänä kuulutuksen julkaisusta (hallintolaki 62 a §).
Suunnitelma pidetään nähtävillä 7.6.2022 - 7.6.2042 osoitteessa https://localhost:3000/s/ABCD/nahtavillaolo.

Kiinteistön omistajilla ja muilla asianosaisilla, sekä niillä, joiden asumiseen, työntekoon tai muihin oloihin suunnitelma vaikuttaa on mahdollisuus tehdä suunnitelmasta muistutus (ratalaki 22 § 1 mom). Muistutus on tehtävä ennen nähtävänäoloajan päättymistä, eli 7.6.2042 mennessä. 

Muistutuksen voi tehdä osoitteessa https://localhost:3000/s/ABCD/nahtavillaolo tai toimittamalla se Väyläviraston kirjaamoon osoitteeseen <kirjaamon VAYLAVIRASTO osoitetta ei löydy>. Kirjaamoon lähetettävään muistutukseen tulee liittää asiatunnus VAYLA/1/2022.

Väylävirasto käsittelee suunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Halutessasi tietää tarkemmin väyläsuunnittelun tietosuojakäytänteistä tutustu verkkosivujen tietosuojaosioon, https://www.vayla.fi/tietosuoja.

Lisätietoja antaa 
Pekka Projari (Väylävirasto), 
puh. 029312, pekka.projari(at)vayla.fi 
Matti Meikalainen (Väylävirasto), 
puh. 0293123123, Matti.Meikalainen(at)vayla.fi 
Marko Koi (Kajaani), 
puh. 0293121213, markku.koi(at)koi.com 

LUONNOS",
}
`;

exports[`nahtavillaoloKuulutusAsiakirja should generate kuulutus pdf succesfully SUOMI (rata, vähäinen menettely) 1`] = `
Object {
  "fileName": "esikatselu_aloituskuulutus_RATA__R414 Kuulutus suunnitelman nahtavillaolo.pdf",
  "textContent": "VAYLA/1/2022



Kuulutus suunnitelman nähtäville asettamisesta
Testiprojekti 1
Väylävirasto on laatinut ratalain (110/2007) mukaisen ratasuunnitelman: Testiprojekti 1.

Lorem Ipsum nahtavillaoloVaihe
Ratasuunnitelman osalta kyse on ratalain 23 §:n mukaisesta vähäisestä rautatien parantamisesta, joka ei muuta paikallisia liikenneolosuhteita ja jonka vaikutukset ovat muutenkin vähäiset.
Väylävirasto on 7.6.2022 julkaissut kuulutuksen suunnitelman nähtäville asettamisesta. Asianosaisten katsotaan saaneen tiedon suunnitelman nähtäville asettamisesta seitsemäntenä päivänä kuulutuksen julkaisusta (hallintolaki 62 a §).
Suunnitelma pidetään nähtävillä 7.6.2022 - 7.6.2042 osoitteessa https://localhost:3000/s/ABCD/nahtavillaolo.

Kiinteistön omistajilla ja muilla asianosaisilla, sekä niillä, joiden asumiseen, työntekoon tai muihin oloihin suunnitelma vaikuttaa on mahdollisuus tehdä suunnitelmasta muistutus (ratalaki 22 § ja 23 §). Muistutus on tehtävä ennen nähtävänä oloajan päättymistä, eli 7.6.2042 mennessä.
Väylävirasto käsittelee suunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Halutessasi tietää tarkemmin väyläsuunnittelun tietosuojakäytänteistä tutustu verkkosivujen tietosuojaosioon, https://www.vayla.fi/tietosuoja.

Lisätietoja antaa 
Pekka Projari (Väylävirasto), 
puh. 029312, pekka.projari(at)vayla.fi 
Matti Meikalainen (Väylävirasto), 
puh. 0293123123, Matti.Meikalainen(at)vayla.fi 
Marko Koi (Kajaani), 
puh. 0293121213, markku.koi(at)koi.com 

LUONNOS",
}
`;

exports[`nahtavillaoloKuulutusAsiakirja should generate kuulutus pdf succesfully SUOMI (tie) (suunnittelusopimus) 1`] = `
Object {
  "fileName": "esikatselu_aloituskuulutus_TIE_suunnittelusopimus_T414 Kuulutus suunnitelman nahtavillaolo.pdf",
  "textContent": "ELY/1/2022



Kuulutus suunnitelman nähtäville asettamisesta
Testiprojekti 1
Uudenmaan elinkeino-, liikenne- ja ympäristökeskus (ELY-keskus) on laatinut liikennejärjestelmästä ja maanteistä annetun lain (503/2005) mukaisen tiesuunnitelman: Testiprojekti 1.

Lorem Ipsum nahtavillaoloVaihe
Uudenmaan ELY-keskus on 7.6.2022 julkaissut kuulutuksen suunnitelman nähtäville asettamisesta. Asianosaisten katsotaan saaneen tiedon suunnitelman nähtäville asettamisesta seitsemäntenä päivänä kuulutuksen julkaisusta (hallintolaki 62 a §).
Suunnitelma pidetään nähtävillä 7.6.2022 - 7.6.2042 osoitteessa https://localhost:3000/s/ABCD/nahtavillaolo.

Kiinteistön omistajilla ja muilla asianosaisilla, sekä niillä, joiden asumiseen, työntekoon tai muihin oloihin suunnitelma vaikuttaa on mahdollisuus tehdä suunnitelmasta muistutus (laki liikennejärjestelmästä ja maanteistä LjMTL 27§). Muistutus on tehtävä ennen nähtävänäoloajan päättymistä, eli 7.6.2042 mennessä. 

Muistutuksen voi tehdä osoitteessa https://localhost:3000/s/ABCD/nahtavillaolo tai toimittamalla se Uudenmaan ELY-keskuksen kirjaamoon osoitteeseen uudenmaan_kirjaamo@uudenmaan.ely. Kirjaamoon lähetettävään muistutukseen tulee liittää asiatunnus ELY/1/2022.

Uudenmaan elinkeino-, liikenne- ja ympäristökeskus käsittelee suunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Halutessasi tietää tarkemmin väyläsuunnittelun tietosuojakäytänteistä tutustu verkkosivujen tietosuojaosioon, https://www.ely-keskus.fi/tietosuoja-ja-henkilotietojen-kasittely.

Lisätietoja antaa 
Pekka Projari (Väylävirasto), 
puh. 029312, pekka.projari(at)vayla.fi 
Matti Meikalainen (Väylävirasto), 
puh. 0293123123, Matti.Meikalainen(at)vayla.fi 
Marko Koi (Kajaani), 
puh. 0293121213, markku.koi(at)koi.com 

LUONNOS",
}
`;

exports[`nahtavillaoloKuulutusAsiakirja should generate kuulutus pdf succesfully SUOMI (tie) 1`] = `
Object {
  "fileName": "esikatselu_aloituskuulutus_TIE__T414 Kuulutus suunnitelman nahtavillaolo.pdf",
  "textContent": "ELY/1/2022



Kuulutus suunnitelman nähtäville asettamisesta
Testiprojekti 1
Uudenmaan elinkeino-, liikenne- ja ympäristökeskus (ELY-keskus) on laatinut liikennejärjestelmästä ja maanteistä annetun lain (503/2005) mukaisen tiesuunnitelman: Testiprojekti 1.

Lorem Ipsum nahtavillaoloVaihe
Uudenmaan ELY-keskus on 7.6.2022 julkaissut kuulutuksen suunnitelman nähtäville asettamisesta. Asianosaisten katsotaan saaneen tiedon suunnitelman nähtäville asettamisesta seitsemäntenä päivänä kuulutuksen julkaisusta (hallintolaki 62 a §).
Suunnitelma pidetään nähtävillä 7.6.2022 - 7.6.2042 osoitteessa https://localhost:3000/s/ABCD/nahtavillaolo.

Kiinteistön omistajilla ja muilla asianosaisilla, sekä niillä, joiden asumiseen, työntekoon tai muihin oloihin suunnitelma vaikuttaa on mahdollisuus tehdä suunnitelmasta muistutus (laki liikennejärjestelmästä ja maanteistä LjMTL 27§). Muistutus on tehtävä ennen nähtävänäoloajan päättymistä, eli 7.6.2042 mennessä. 

Muistutuksen voi tehdä osoitteessa https://localhost:3000/s/ABCD/nahtavillaolo tai toimittamalla se Uudenmaan ELY-keskuksen kirjaamoon osoitteeseen uudenmaan_kirjaamo@uudenmaan.ely. Kirjaamoon lähetettävään muistutukseen tulee liittää asiatunnus ELY/1/2022.

Uudenmaan elinkeino-, liikenne- ja ympäristökeskus käsittelee suunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Halutessasi tietää tarkemmin väyläsuunnittelun tietosuojakäytänteistä tutustu verkkosivujen tietosuojaosioon, https://www.ely-keskus.fi/tietosuoja-ja-henkilotietojen-kasittely.

Lisätietoja antaa 
Pekka Projari (Väylävirasto), 
puh. 029312, pekka.projari(at)vayla.fi 
Matti Meikalainen (Väylävirasto), 
puh. 0293123123, Matti.Meikalainen(at)vayla.fi 
Marko Koi (Kajaani), 
puh. 0293121213, markku.koi(at)koi.com 

LUONNOS",
}
`;

exports[`nahtavillaoloKuulutusAsiakirja should generate kuulutus pdf succesfully SUOMI (tie, vähäinen menettely) 1`] = `
Object {
  "fileName": "esikatselu_aloituskuulutus_TIE__T414 Kuulutus suunnitelman nahtavillaolo.pdf",
  "textContent": "ELY/1/2022



Kuulutus suunnitelman nähtäville asettamisesta
Testiprojekti 1
Uudenmaan elinkeino-, liikenne- ja ympäristökeskus (ELY-keskus) on laatinut liikennejärjestelmästä ja maanteistä annetun lain (503/2005) mukaisen tiesuunnitelman: Testiprojekti 1.

Lorem Ipsum nahtavillaoloVaihe
Tiesuunnitelman osalta kyse on lain liikennejärjestelmästä ja maanteistä 28 §:n mukaisesta vähäisestä maantien parantamisesta, joka ei muuta paikallisia liikenneolosuhteita ja jonka vaikutukset ovat muutenkin vähäiset.
Uudenmaan ELY-keskus on 7.6.2022 julkaissut kuulutuksen suunnitelman nähtäville asettamisesta. Asianosaisten katsotaan saaneen tiedon suunnitelman nähtäville asettamisesta seitsemäntenä päivänä kuulutuksen julkaisusta (hallintolaki 62 a §).
Suunnitelma pidetään nähtävillä 7.6.2022 - 7.6.2042 osoitteessa https://localhost:3000/s/ABCD/nahtavillaolo.

Kiinteistön omistajilla ja muilla asianosaisilla, sekä niillä, joiden asumiseen, työntekoon tai muihin oloihin suunnitelma vaikuttaa on mahdollisuus tehdä suunnitelmasta muistutus (LjMTL 27 § ja 28 §). Muistutus on tehtävä ennen nähtävänä oloajan päättymistä, eli 7.6.2042 mennessä.
Uudenmaan elinkeino-, liikenne- ja ympäristökeskus käsittelee suunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Halutessasi tietää tarkemmin väyläsuunnittelun tietosuojakäytänteistä tutustu verkkosivujen tietosuojaosioon, https://www.ely-keskus.fi/tietosuoja-ja-henkilotietojen-kasittely.

Lisätietoja antaa 
Pekka Projari (Väylävirasto), 
puh. 029312, pekka.projari(at)vayla.fi 
Matti Meikalainen (Väylävirasto), 
puh. 0293123123, Matti.Meikalainen(at)vayla.fi 
Marko Koi (Kajaani), 
puh. 0293121213, markku.koi(at)koi.com 

LUONNOS",
}
`;

exports[`nahtavillaoloKuulutusAsiakirja should generate kuulutus pdf succesfully SUOMI (yleis) (suunnittelusopimus) 1`] = `
Object {
  "fileName": "esikatselu_aloituskuulutus_YLEINEN_suunnittelusopimus_Y414 Kuulutus suunnitelman nahtavillaolo.pdf",
  "textContent": "ELY/1/2022



Kuulutus suunnitelman nähtäville asettamisesta
Testiprojekti 1
Uudenmaan elinkeino-, liikenne- ja ympäristökeskus (ELY-keskus) on laatinut liikennejärjestelmästä ja maanteistä annetun lain (503/2005) mukaisen yleissuunnitelman: Testiprojekti 1.

Lorem Ipsum nahtavillaoloVaihe
Uudenmaan ELY-keskus on 7.6.2022 julkaissut kuulutuksen suunnitelman nähtäville asettamisesta. Asianosaisten katsotaan saaneen tiedon suunnitelman nähtäville asettamisesta seitsemäntenä päivänä kuulutuksen julkaisusta (hallintolaki 62 a §).
Suunnitelma pidetään nähtävillä 7.6.2022 - 7.6.2042 osoitteessa https://localhost:3000/s/ABCD/nahtavillaolo.

Kiinteistön omistajilla ja muilla asianosaisilla, sekä niillä, joiden asumiseen, työntekoon tai muihin oloihin suunnitelma vaikuttaa on mahdollisuus tehdä suunnitelmasta muistutus (laki liikennejärjestelmästä ja maanteistä LjMTL 27§). Muistutus on tehtävä ennen nähtävänäoloajan päättymistä, eli 7.6.2042 mennessä. 

Muistutuksen voi tehdä osoitteessa https://localhost:3000/s/ABCD/nahtavillaolo tai toimittamalla se Uudenmaan ELY-keskuksen kirjaamoon osoitteeseen uudenmaan_kirjaamo@uudenmaan.ely. Kirjaamoon lähetettävään muistutukseen tulee liittää asiatunnus ELY/1/2022.

Uudenmaan elinkeino-, liikenne- ja ympäristökeskus käsittelee suunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Halutessasi tietää tarkemmin väyläsuunnittelun tietosuojakäytänteistä tutustu verkkosivujen tietosuojaosioon, https://www.ely-keskus.fi/tietosuoja-ja-henkilotietojen-kasittely.

Lisätietoja antaa 
Pekka Projari (Väylävirasto), 
puh. 029312, pekka.projari(at)vayla.fi 
Matti Meikalainen (Väylävirasto), 
puh. 0293123123, Matti.Meikalainen(at)vayla.fi 
Marko Koi (Kajaani), 
puh. 0293121213, markku.koi(at)koi.com 

LUONNOS",
}
`;
